# rosetta-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  UBIQUITOUS_LANGUAGE.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  rosetta.toml  user-flow.mmd
.claude/get-shit-done/: bin
.claude/rules/: codebase-context.md  gsd-planning.md
.github/workflows/: ci.yml  docs.yml
.planning/: .auto-log.jsonl  .auto-state.json  .learnings-last-run  DECISIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: .last-mapped  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/designs/: 2026-04-13-phase5-code-quality-plan01.md  2026-04-13-phase5-code-quality-plan02.md  2026-04-15-user-review-accredit-sssom.md  2026-04-16-phase16-rml-gen-v2.md  2026-04-17-phase16-plan03-rml-runner.md  2026-04-21-ux-refactor.md  2026-04-24-datatype-conversions.md  review-2026-04-12-phase1-scaffolding.md  review-2026-04-12-phase2-rosetta-ingest.md  review-2026-04-12-phase3-rosetta-embed.md  review-2026-04-12-rosetta-suggest.md  review-2026-04-13-phase4-rosetta-lint.md  review-2026-04-13-rml-gen-plan01.md  review-2026-04-13-rosetta-accredit-plan02.md  review-2026-04-13-rosetta-ingest-extensions-plan02.md  review-2026-04-13-rosetta-ingest-extensions.md  review-2026-04-13-rosetta-provenance.md  review-2026-04-13-rosetta-rml-gen.md  review-2026-04-13-rosetta-translate.md  review-2026-04-13-rosetta-validate.md  review-2026-04-14-phase12-schema-normalization.md  review-2026-04-14-sssom-output.md  review-2026-04-15-phase14-audit-log-pipeline.md  review-2026-04-15-phase15-lint-sssom.md  review-2026-04-15-structural-feature-extraction.md  review-2026-04-16-phase16-00-audit-log-schema.md  review-2026-04-16-phase16-01-transform-spec-builder.md  review-2026-04-16-phase17-unit-detect.md  review-2026-04-17-phase16-02-yarrrml-compiler.md  review-2026-04-17-phase16-03-rml-runner.md  review-2026-04-17-phase17-pass2.md  review-2026-04-18-phase18.md  review-2026-04-19-phase19-shacl-validation.md  review-2026-04-21-ux-refactor.md  review-2026-04-24-phase23-04-transform-builder.md
.planning/phases/01-scaffolding/: 01-PLAN.md  01-SUMMARY.md  CONTEXT.md
.planning/phases/02-rosetta-ingest/: 02-01-PLAN.md  02-01-SUMMARY.md  CONTEXT.md
.planning/phases/03-rosetta-embed-suggest/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  CONTEXT.md
.planning/phases/04-rosetta-lint/: 04-01-PLAN.md  04-01-SUMMARY.md  CONTEXT.md
.planning/phases/05-code-quality/: 05-01-PLAN.md  05-02-PLAN.md  CONTEXT.md
.planning/phases/06-rosetta-rml-gen/: .decisions-pending.md  06-01-PLAN.md  06-CONTEXT.md  plan01-rml-engine.md  plan02-fnml-integration.md
.planning/phases/07-rosetta-provenance/: .decisions-pending.md  07-01-CONTEXT.md  07-01-PLAN.md
.planning/phases/08-rosetta-validate/: .decisions-pending.md  08-01-CONTEXT.md  08-01-PLAN.md
.planning/phases/09-rosetta-accredit/: 09-01-PLAN.md  09-02-CONTEXT.md  09-02-PLAN.md
.planning/phases/10-translate/: 10-01-CONTEXT.md  10-01-PLAN.md
.planning/phases/11-ingest-extensions/: 11-01-PLAN.md  11-02-PLAN.md  CONTEXT.md
.planning/phases/12-schema-normalization/: 12-01-PLAN.md  12-01-SUMMARY.md  CONTEXT.md
.planning/phases/13-semantic-matching/: 13-01-CONTEXT.md  13-01-PLAN.md  13-01-SUMMARY.md  13-02-CONTEXT.md  13-02-PLAN.md  13-02-SUMMARY.md
.planning/phases/14-user-review/: 14-01-CONTEXT.md  14-01-PLAN.md  14-01-SUMMARY.md
.planning/phases/15-lint-sssom/: 15-01-PLAN.md  15-01-SUMMARY.md  CONTEXT.md
.planning/phases/16-rml-gen-v2/: 16-00-PLAN.md  16-00-SUMMARY.md  16-01-PLAN.md  16-01-SPEC.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SPEC.md  16-02-SUMMARY.md  16-03-PLAN.md  16-03-SPEC.md  16-03-SUMMARY.md  CONTEXT.md  CURIE-MERGE-SCOPE.md  RESEARCH.md
.planning/phases/17-unit-detect/: 17-01-CONTEXT.md  17-01-PLAN.md  17-01-SUMMARY.md
.planning/phases/18-integration-test-hardening/: 18-01-PLAN.md  18-01-SUMMARY.md  (+6 more)
.planning/research/: phase12-library-apis.md
.planning/reviews/: 2026-04-18-full-codebase.md
docs/: configuration.md  getting-started.md  index.md
docs/cli/: accredit.md  compile.md  embed.md  index.md  ingest.md  ledger.md  lint.md  provenance.md  run.md  shacl-gen.md  shapes.md  suggest.md  transform.md  translate.md  validate.md  yarrrml-gen.md
docs/concepts/: accreditation.md  functions.md  pipeline.md  type-handling.md
rosetta/cli/: __init__.py  accredit.py  compile.py  embed.py  ingest.py  ledger.py  lint.py  provenance.py  rml_gen.py  run.py  shacl_gen.py  shapes.py  suggest.py  transform.py  translate.py  validate.py  yarrrml_gen.py
rosetta/core/: accredit.py  config.py  embedding.py  features.py  function_library.py  ingest_rdf.py  io.py  ledger.py  lint.py  models.py  normalize.py  provenance.py  rdf_utils.py  rml_builder.py  rml_runner.py  schema_utils.py  shacl_generator.py  shacl_validate.py  shapes_loader.py  similarity.py  transform_builder.py  translation.py  unit_detect.py  units.py
rosetta/functions/: typecasts.fno.ttl  unit-conversions.fno.ttl  unit_conversion_udfs.py
rosetta/policies/: fnml_registry.ttl  mapping.shacl.ttl  qudt_units.ttl
rosetta/tests/: conftest.py  test_accredit.py  test_accredit_integration.py  test_cli_init.py  test_compile.py  test_config.py  test_custom_functions.py  test_embed.py  test_features.py  test_function_library.py  test_ingest.py  test_ingest_json_sample.py  test_io.py  test_ledger.py  test_ledger_integration.py  test_lint.py  test_lint_functions.py  test_models.py  test_normalize.py  test_provenance.py  test_rdf_utils.py  test_rml_gen.py  test_rml_runner.py  test_run.py  test_schema_utils.py  test_shacl_gen.py  test_shacl_overrides.py  test_shapes.py  test_suggest.py  test_transform.py  test_translate.py  test_unit_detect.py  test_validate.py  test_yarrrml_compile_integration.py  test_yarrrml_gen.py  test_yarrrml_run_e2e.py
scripts/: demo.sh  full-pipeline.sh  pipeline-demo.sh  pipeline.sh  quickstart.sh
store/master-ontology/: master.ttl
(+79 files in other folders)
