[project]
name = "rosetta-cli"
version = "0.1.0"
description = "Composable CLI tools for semantic mapping between NATO defense schemas and a master ontology."
requires-python = ">=3.11"
dependencies = [
    "rdflib>=6.3",
    "click>=8.1",
    "pyyaml>=6.0",
    "pyshacl>=0.20",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.scripts]
rosetta-ingest     = "rosetta.cli.ingest:cli"
rosetta-embed      = "rosetta.cli.embed:cli"
rosetta-suggest    = "rosetta.cli.suggest:cli"
rosetta-lint       = "rosetta.cli.lint:cli"
rosetta-validate   = "rosetta.cli.validate:cli"
rosetta-rml-gen    = "rosetta.cli.rml_gen:cli"
rosetta-provenance = "rosetta.cli.provenance:cli"
rosetta-accredit   = "rosetta.cli.accredit:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosetta"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
