[project]
name = "rosetta-cli"
version = "0.1.0"
description = "Composable CLI tools for semantic mapping between NATO defense schemas and a master ontology."
requires-python = ">=3.11"
dependencies = [
    "rdflib>=6.3",
    "click>=8.1",
    "pyyaml>=6.0",
    "pyshacl>=0.20",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "pydantic>=2.13.0",
    "deepl>=1.18,<2",
    "genson>=1.2",
    "schema-automator>=0.5.5",
    "sssom>=0.4.15",
    "linkml>=1.10.0",
    "linkml-map",
    "curies>=0.13.3",
    "morph-kgc==2.10.0",
]

[project.scripts]
rosetta-ingest     = "rosetta.cli.ingest:cli"
rosetta-embed      = "rosetta.cli.embed:cli"
rosetta-suggest    = "rosetta.cli.suggest:cli"
rosetta-lint       = "rosetta.cli.lint:cli"
rosetta-validate   = "rosetta.cli.validate:cli"
rosetta-yarrrml-gen = "rosetta.cli.yarrrml_gen:cli"
rosetta-provenance = "rosetta.cli.provenance:cli"
rosetta-accredit   = "rosetta.cli.accredit:cli"
rosetta-translate  = "rosetta.cli.translate:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosetta"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]

[dependency-groups]
dev = [
    "bandit>=1.8",
    "basedpyright>=1.39.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "radon>=6.0",
    "ruff>=0.15.10",
    "vulture>=2.14",
    "refurb>=2.0",
    "pytest-cov>=7.1.0",
]

[tool.radon]
exclude = "rosetta/tests/*,rosetta/cli/*"

[tool.vulture]
min_confidence = 80
paths = ["rosetta"]
exclude = ["rosetta/tests"]

[tool.mypy]
# Refurb passes rosetta/ files to mypy explicitly — they're always checked.
# Skip following any imports into dependency code (never our problem to fix).
follow_imports = "skip"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["rosetta/tests"]
skips = []

[tool.uv.sources]
linkml-map = { git = "https://github.com/drex04/linkml-map.git", rev = "00150683e9ad03cefa00e3c0e2d55f0e3cc6df9f" }
