[project]
name = "rosetta-cli"
version = "0.1.0"
description = "Composable CLI tools for semantic mapping between NATO defense schemas and a master ontology."
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.2",
    "click>=8.1",
    "pyyaml>=6.0",
    "pyshacl>=0.31",
    "sentence-transformers>=5.4",
    "numpy>=2.4",
    "pydantic>=2.13",
    "deepl>=1.30,<2",
    "genson>=1.3",
    "schema-automator>=0.5.5",
    "sssom>=0.4.15",
    "linkml>=1.10",
    "linkml-map",
    "curies>=0.13.4",
    "morph-kgc==2.10.0",
    "quantulum3>=0.10",
    "pint>=0.25",
]

[project.scripts]
rosetta = "rosetta.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "pytest-cov>=7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rosetta"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as multi-component integration (deselect with '-m not integration')",
    "e2e: marks tests as full end-to-end pipelines; always also slow (deselect with '-m not e2e')",
    "adversarial: marks tests as adversarial CLI misuse / hostile-input checks (deselect with '-m not adversarial')",
]
testpaths = ["rosetta/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:rdflib.*",
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::DeprecationWarning:multiprocessing.*",
]

[dependency-groups]
dev = [
    "bandit>=1.9",
    "basedpyright>=1.39",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "radon>=6.0",
    "ruff>=0.15",
    "vulture>=2.16",
    "refurb>=2.3",
    "pytest-cov>=7.1",
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
    "mkdocs-click>=0.9",
]

[tool.radon]
exclude = "rosetta/tests/*,rosetta/cli/*"

[tool.vulture]
min_confidence = 80
paths = ["rosetta"]
exclude = ["rosetta/tests"]

[tool.mypy]
# Refurb passes rosetta/ files to mypy explicitly — they're always checked.
# Skip following any imports into dependency code (never our problem to fix).
follow_imports = "skip"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["rosetta/tests"]
skips = []

[tool.uv.sources]
linkml-map = { git = "https://github.com/drex04/linkml-map.git", rev = "00150683e9ad03cefa00e3c0e2d55f0e3cc6df9f" }
